Made certain changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hello world! This is my first Webapp!!!
+	    <h4> New Heading! Changed through node js</h4>
+		Some changes
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
